Take domain name from the zone value
This change allows to use a dynamic name for the zone because
ansible lacks a way to use template variable for dict keys.

--- a/templates/nsd.conf.j2
+++ b/templates/nsd.conf.j2
@@ -36,7 +36,11 @@ key:
 
 {% for k, v in nsd_zones | dictsort %}
 zone:
+{% if 'name' in v %}
+    name: {{ v.name }}
+{% else %}
     name: {{ k }}
+{% endif %}
 {% if 'zonefile' in v %}
     zonefile: {{ v.zonefile }}
 {% endif %}
